--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+:root {
+  --primary-white: #fff;
+  --primary-orange: #f9ab00;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: grey !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  height: 100px;
+  background-color: red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+/**************** NAVBAR ****************/
+
+.logo {
+  color: var(--primary-white);
+  cursor: pointer;
+}
+
+/**************** MENU LINKS ****************/
+
+/*.navbar-nav a.nav-link {
+  cursor: pointer;
+  background-color: orange;
+}*/
+
+.navbar-toggler { marging: 0 auto; }
+
+.navbar-nav li a {
+  margin-left: 0.75rem;
+  color: var(--primary-white) !important;
+  font-weight: 600;
+  padding: 0;
+}
+
+.navbar-brand {
+  max-width: 17.25rem;
+  padding: 0 !important;
+  height: 6rem !important;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-nav > li.nav-item > a.nav-link.active, .navbar-nav > li.nav-item > a.nav-link:focus {
+  border-top: 2px solid var (--primary-orange);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-nav > li > a {
+  color: #fff;
+  text-decoration: none;
+  position: relative;
+  font-weight: 600;
 }
+
+.navbar-nav > li > a::after{
+  content: '';
+  width: 0;
+  height: 3px;
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #fff;
+  transition: width 0.3s;
+}
+
+.navbar-nav > li > a:hover::after{
+  width: 50%;
+}
+
+
