--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,32 @@
 :root {
   --primary-white: #fff;
   --primary-orange: #f9ab00;
+  --primary-dark: rgba(255,255,255, 0);
+  --primary-red: #ef4035;
+  --primary-hover-red: #f33501;
+}
+
+* {
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  background-color: grey !important;
-}
-
-.container {
-  height: 100px;
-  background-color: red;
+  /*background-image: linear-gradient(rgba(0,0,0,0.3), transparent),url(images/background.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;*/
 }
 
 /**************** NAVBAR ****************/
+
+nav {
+  z-index: 2;
+}
 
 .logo {
   color: var(--primary-white);
@@ -25,17 +38,14 @@ body {
 
 /**************** MENU LINKS ****************/
 
-/*.navbar-nav a.nav-link {
+.navbar-nav a.nav-link {
   cursor: pointer;
-  background-color: orange;
-}*/
+}
 
-.navbar-toggler { marging: 0 auto; }
 
-.navbar-nav li a {
+li.nav-item a {
   margin-left: 0.75rem;
   color: var(--primary-white) !important;
-  font-weight: 600;
   padding: 0;
 }
 
@@ -43,8 +53,14 @@ body {
   max-width: 17.25rem;
   padding: 0 !important;
   height: 6rem !important;
-  align-items: center;
-  display: flex;
+  align-items: center; /* for logo */
+  display: flex;       /* for logo */
+}
+
+@media(max-width: 768px) {
+  .navbar-brand {
+    width: 7rem;
+  }
 }
 
 .navbar-nav > li.nav-item > a.nav-link.active, .navbar-nav > li.nav-item > a.nav-link:focus {
@@ -73,5 +89,88 @@ body {
 .navbar-nav > li > a:hover::after{
   width: 50%;
 }
+
+/**************** HEADER ****************/
+
+.header-wrapper {
+  position: relative;
+  background: url(images/laptop.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 1;
+}
+
+.main-info h1 {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+}
+
+/**************** TYPED TEXT ****************/
+
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-white);
+}
+
+@media(max-width: 768px) {
+  .main-info h1 {
+    font-size: 1.7rem !important;
+  }
+  .typed-text {
+    font-size: 1.3rem !important;
+  }
+}
+
+/**************** HEADER MAIN OFFER BUTTON ****************/
+
+.btn-main-offer {
+  border: 1px solid var(--primary-red);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 0.75rem;
+  color: var(--primary-white);
+  margin: 2rem;
+  text-decoration: none;
+}
+
+.btn-main-offer:hover {
+  text-decoration: none;
+  color: var(--primary-white);
+  background-color: var(--primary-hover-red);
+  transition: .2s ease-in-out;
+}
+
+/**************** PARTICLES JS ****************/
+
+.tsparticles-canvas-el {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
+
+@media(max-width: 768px) {
+  .particles-canvas {
+    display: none;
+  }
+}
+
+
+
+
 
 
